refactor: HTML inline-style class로 분리해서 적용

--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -22,6 +22,10 @@ body {font-family: 'Nanum Gothic', sans-serif !important; margin: 0px; padding: 
   @apply outline-none;
 }
 
+.primary-color {
+  color: var(--primary-color);
+}
+
 select {
   background-image: url("../img/drop-down.svg");
   background-position: 95%;
