--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -11,9 +11,11 @@ html {
   @apply w-full h-full;
 }
 body {font-family: 'Nanum Gothic', sans-serif !important; margin: 0px; padding: 0px; width: 100%; height: 100%; position: relative; font-size: 12px;}
+
 .v-application {
   font-family: 'Nanum Gothic', sans-serif !important;
 }
+
 * {
   @apply m-0 p-0;
 }
@@ -349,9 +351,9 @@ select {
   }
 }
 
-.pipelineUpdateContentBox{
-  width: 95%; 
-  margin-top: 5%;
+.pipelineUpdateContentBox {
+  display: flex;
+  flex-direction: column;
 }
 
 .pipelineUpdateBtnBox {
